--- a/SMHET.tex
+++ b/SMHET.tex
@@ -36,7 +36,7 @@
 Light-initiated generation of energetic carriers has attracted considerable attention as a paradigm for 
 photocatalysis and solar energy conversion, and the use of noble metal nanoparticles that support localized surface
 plasmon resonances has been widely explored as a medium for realizing this paradigm.  It was recently
-shown that composite nanostructures that enable the interplay between dielectric scattering resonances and broad-band
+shown that composite nanostructures enable the interplay between dielectric scattering resonances and broad-band
 absorption in small metal nanostructures, a phenomenon termed scattering mediated absorption, can be 
 used to mediate energetic carrier transfer and selective photochemistry with 
 low-intensity light while completely circumventing plasmon resonance.  In this work, we develop 
@@ -70,16 +70,23 @@ reactions~\cite{CXL_NatureChem_2011,MZL_Science_2013,MLL_NanoLett_2013,LFP_AC_20
 
 In PHET, the collective plasmon excitation decays rapidly (on a ~10 femtosecond timescale) to a non-equilibrium distribution of energetic electron-hole pairs, or a so-called hot carrier 
 distribution~\cite{KAC_ACSCatalysis_2013,GZG_JPCC_2013,SNJ_NatComm_2014,WCM_Science_2015,MWW_NatComm_2015, BSN_ACSNano_2016}.  
-Hot carriers can can deposit energy into reactive degrees of freedom of molecules adsorbed to the nanoparticle surface, thereby initiating chemical transformations.  Despite the considerable progress made in 
-demonstrating the potential of the paradigm of PHET, its widespread application faces several challenges. The intrinsic optical properties of noble metals that give rise to the extraordinarily 
-large absorption cross sections associated with LSPR are also fundamentally related to the broad energy spectra and short lifetimes associated with LSPR and the subsequent hot carrier 
+Hot carriers can deposit energy into reactive degrees of freedom of molecules adsorbed 
+to the nanoparticle surface, thereby initiating chemical transformations.  Despite 
+the considerable progress made in 
+demonstrating the potential of PHET, its widespread application 
+faces several challenges. The intrinsic optical properties of noble metals that 
+give rise to the extraordinarily 
+large absorption cross sections associated with LSPR are also fundamentally 
+related to the broad energy spectra and short lifetimes associated with LSPR 
+and the subsequent hot carrier 
 distributions~\cite{KS_JCP_1983}. 
 Furthermore, the timescale of hot carrier relaxation competes 
 with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  \textcolor{red}{Finally, there are a limited number of materials that show promising plasmonic
 behaviors (most prominently silver and gold), and it is desirable to extend the palette of available materials to include
 non-precious metals and metals with broader applicability in catalysis~\cite{SZZ_PNAS_2016}.}
 
-Considering this, an incredible opportunity exists to identify new classes of structures for mediating light-matter interactions and energy transfer events that offer the same advantages as metal nanoparticles, 
+Considering this, an incredible opportunity exists to identify new classes
+of materials capable of mediating light-matter interactions and energy transfer events that offer the same advantages as metal nanoparticles, 
 namely exceptional light-harvesting potential, while also offering greater selectivity and efficiency in energy transfer, as well as tunable surface chemistry for enhanced catalytic activity.  
 Ideally, such structures could be made mostly, if not entirely, from cost-effective materials.  Recent progress towards this aim has been made by designing hybrid 
 nanostructures that effectively delegate the light-harvesting and catalytic functions to separate components of the structure.  Recently, Halas and co-workers 
@@ -213,7 +220,7 @@ and the orbital populations are given by the diagonal elements of the 1-electron
 \end{equation} 
 where the second-quantized operator $\hat{a}_q^{\dagger}$ ($\hat{a}_q$) creates (kills) an electron
 in orbital $q$~\cite{Szabo}.  \textcolor{red}{The hot-carrier populations plotted in Figures 1 and 2 panels (e) and (f)
-are computed as $^1D^q_q(t)-^1D^q_q(t=0)$, and similiarly for the change in occupations plotted
+are computed as $^1D^q_q(t)-^1D^q_q(t=0)$, and similarly for the change in occupations plotted
 in Figure 3 panels (b) and (c).} The orbital indices can be uniquely mapped to the relevant orbital quantum numbers ($n_x, n_y, n_z$ for
 the PIW NC model) so that the orbital energies can be readily computed (see SI for more details). 
 
@@ -322,8 +329,9 @@ and electrons in the highest
 lying orbital ($E_F + 0.84 eV$) in the PIW Pt NC active space as compared to FP resonance of the $d=270nm$ NS (see Figure 2 (e) and (f)).  
 The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).  \textcolor{red}{Fairly rapid fluctuations in the hot-carrier populations 
 are observed in both Au and Pt nanoparticles at relatively short times for all three regimes; this presumably results from the
-broad distribution of energies in the incident optical fields that encounter the metal nanoparticles combined with
-the density of available transition channels.  By contrast, analogoues calculations that have a lower density of
+broad distribution of energies in the optical fields that encounter the metal nanoparticles 
+at early times combined with
+the density of available transition channels.  By contrast, analogous calculations that have a lower density of
 transition channels through neglect of excited-state to excited-state transitions show smoother dynamics
 (see Figure S4).}
 \begin{figure}
@@ -366,14 +374,14 @@ This result points to the potential for realizing efficient hot carrier generati
 earth abundant and cost-effective; \textcolor{red}{future investigations that utilize
 more realistic models of the electronic structure will be performed to develop a more detailed
 understanding of factors that influence the efficiency of hot-carrier generation in non- or poor plasmonic metals.
-Additional developments that focus on a treatement of the optical properties
-of the metal that is self-consistent across the electroydynamics and quantum dynamics domains may also be valuable and will be explored.  In principle, the dielectric function may be derived directly from electronic struture calculations of
+Additional developments that focus on a treatment of the optical properties
+of the metal that is self-consistent across the electrodynamics and quantum dynamics domains may also be valuable and will be explored.  In principle, the dielectric function may be derived directly from electronic structure calculations of
 the metal nanoparticles, and so a self-consistent approach would include deriving the dielectric
 function from the same electronic structure model used for the hot-carrier dynamics.  Currently, the electrodynamics
 calculations are performed using bulk dielectric data for the metals of interest, though disparities
 from bulk behavior have been well documented for particles of this size~\cite{KS_JCP_1983,CTP_3,SKD_Nature_2012,CTP}.
-Analogous calculations that utilze size-dependent corrections to
-dielectric function in the electrodymanics calculations suggest that the hot-electron dynamics
+Analogous calculations that utilize size-dependent corrections to
+dielectric function in the electrodynamics calculations suggest that the hot-electron dynamics
 resulting from SMA may be sensitive to the size-dependent dielectric response of the metal nanoparticles involved,
 though the qualitative features of the hot-carrier dynamics reported in this work
 are preserved upon inclusion of these corrections (see Figure S5).  The overall similarity 
