--- a/SMHET_SI.tex
+++ b/SMHET_SI.tex
@@ -141,9 +141,9 @@ configurations are considered, similar to linear-response or TDPT-based approach
 \begin{center}
 \includegraphics[width=6in]{Ag_LR_vs_TDCIS.png}
 \caption{Comparison of hot-electron dynamics as computed from the full TDCIS method (purple
-line labelled SMA Full TDCIS) and one where
+line labeled SMA Full TDCIS) and one where
 excited-to-excited configurations are neglected in the spirit of approaches based on linear-response
-theory and time-dependent perturbation theory to first order (black line labelled SMA Linear Response).  While the two approaches agree at short
+theory and time-dependent perturbation theory to first order (black line labeled SMA Linear Response).  While the two approaches agree at short
 times, the long-time dynamics can show significant departure as population accumulates
 in excited-state configurations.  These calculations consider 685 nm dielectric nanospheres (n=2.6)
 decorated with 2nm Ag nanocubes. }
@@ -154,8 +154,8 @@ decorated with 2nm Ag nanocubes. }
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{Ag_SC_Compare.png}
-\caption{Comparison of hot-electron dynamics with from SMA with (black line labelled SMA with SC) and without
-(purple line labelled SMA) a phenomenological size
+\caption{Comparison of hot-electron dynamics with from SMA with (black line labeled SMA with SC) and without
+(purple line labeled SMA) a phenomenological size
 correction to the dielectric function of silver in 685 dielectric nanospheres (n=2.6) decorated with 2 nm Ag nanocubes.
 The size corrections are described in Eq. (11) - (14) of this Supporting Information document.  }
 \end{center}
@@ -218,7 +218,7 @@ inter-band contribution to the dielectric function from the bulk experimental da
 \begin{equation}
 \epsilon_{SC}(\omega) = \epsilon_{inter}(\omega) + \epsilon_{Drude,SC}(\omega).
 \end{equation}
-\textcolor{red}{Results from these prototpye calculations are shown in Figure S5.}
+\textcolor{red}{Results from these prototype calculations are shown in Figure S5.}
 \bibliography{SMHET_SI} 
 
 \end{document}
