--- a/SMHET.bib
+++ b/SMHET.bib
@@ -4,6 +4,40 @@
 }
 
 %%%%%%%%%%  THEORY PAPERS
+
+%%% TDDFT
+%%% LR
+@article{ZHS_JCP_2013,
+author = {T. J. Zuehlsdorff and N. D. M. Hine and J. S. Spencer and N. M. Harrison and D. J. Riley and P. D. Haynes},
+journal = {J. Chem. Phys.},
+volume = {139},
+title = {Linear-scaling time-dependent density-functional theory in the linear response
+formalism},
+pages = {064104},
+year = {2013}
+}
+
+%%% LR-TDDFT vs RT-TDDFT
+@article{TGL_JCTC_2015,
+author = {S. Tussupbayev and N. Govind and K. Lopata and C. J. Cramer},
+title = {Comparison of Real-Time and Linear-Response Time-Dependent Density Functional Theories
+for Molecular Chromophores Ranging from Sparse to High Desnsities of States},
+journal = {J. Chem. Theory Comput.},
+volume = {11},
+pages = {1102-1109},
+year = {2015}
+}
+
+@article{RN_JCTC_2011,
+volume = {7},
+pages = {2492-2497},
+year = {2011},
+journal = {J. Chem. Theory Comput.},
+title = {Critical Examination of Explicitly Time-Dependent Density Functional Theory for Coherent Control
+of Dipole Switching},
+author = {S. Raghunathan and M. Nest}
+}
+
 @article{SAG_ACSPhotonics_2016,
 author = {J. R. M. Saavedra and Ana Asenjo-Garcia and { Garc\'ia de Abajo}, F. J.},
 title = {Hot-Electron Dynamics and Thermalization in Small Metallic Nanoparticles},
