--- a/SMHET.tex
+++ b/SMHET.tex
@@ -166,8 +166,8 @@ Explicit expressions for each class of matrix elements are given in the SI.
 \textcolor{red}{Importantly, the lower diagonal block of the CIS Hamiltonian matrix contains terms which couple together
 different excited configurations.  In particular, transitions between singly-excited configurations which differ
 in only one unoccupied index ($|\Phi_i^a\rangle \rightarrow |\Phi_i^b\rangle$) or which differ in only one occupied index
- ($|\Phi_i^a\rangle \rightarrow |\Phi_j^a\rangle$) are enabled by the terms in the lower diagonal block.  Such excited-state to excited-state transitions are absent from approaches based including linear response TDDFT and approaches which use time-dependent perturbation
- theory to first order, as these only include transitions between ground- and singly-excited configurations ($|\Phi_0\rangle \rightarrow |\Phi_i^b\rangle$)%%%%% Need citations here!.
+ ($|\Phi_i^a\rangle \rightarrow |\Phi_j^a\rangle$) are enabled by the terms in the lower diagonal block.  Such excited-state to excited-state transitions are absent from linear response TDDFT and approaches which use time-dependent perturbation
+ theory to first order, as these only include transitions between ground- and singly-excited configurations ($|\Phi_0\rangle \rightarrow |\Phi_i^b\rangle$)~\cite{ZHS_JCP_2013,GZG_JPCC_2013}.
 The ($|\Phi_i^a\rangle \rightarrow |\Phi_i^b\rangle$) and ($|\Phi_i^a\rangle \rightarrow |\Phi_j^a\rangle$) are important in this context because the fields that arise from SMA continue to evolve on long ($>$100 fs) timescale.  On this timescale, population can 
 accumulate in excited-state configurations, enabling the SMA fields to drive transitions between excited configurations as well as from the 
 ground-state configuration (see Supporting Information and Figure S4 for more details).} 
