--- a/SMHET.tex
+++ b/SMHET.tex
@@ -178,7 +178,7 @@ this work neglects excited-state thermalization contributions from electron-elec
 \textcolor{red}{As shown in previous work, the inclusion of many-body effects can impact the calculation
 of hot-carrier distributions when transitions from $d$ bands are relevant, which is in principle whenever the perturbing
 field contains frequency components that overlap with interband transitions involving $d$ bands~\cite{MLK_ACSNano_2014,BMN_NatComm_2015, Atwater_Review}.  
-In this work, we explore SMA involving Ag and Pt nanoparticles, and we wish to emphasize that the many-body effects 
+In this work, we explore SMA involving Au and Pt nanoparticles, and we wish to emphasize that the many-body effects 
 which are neglected in this work are expected to have an impact on the hot-carrier distributions in both of these metals, 
 as both have energetic gaps between the $d$-band and the Fermi level which are smaller than energy components of the optical fields
 considered here.  Examination of these two metals within our model still presents considerable value because it provides
