--- a/SMHET.tex
+++ b/SMHET.tex
@@ -81,9 +81,9 @@ related to the broad energy spectra and short lifetimes associated with LSPR
 and the subsequent hot carrier 
 distributions~\cite{KS_JCP_1983}. 
 Furthermore, the timescale of hot carrier relaxation competes 
-with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  \textcolor{red}{Finally, there are a limited number of materials that show promising plasmonic
+with transfer to adsorbate states (both occur on 100 fs timescales), which fundamentally limits the efficiency of energy transfer~\cite{WCM_Science_2015}.  Finally, there are a limited number of materials that show promising plasmonic
 behaviors (most prominently silver and gold), and it is desirable to extend the palette of available materials to include
-non-precious metals and metals with broader applicability in catalysis~\cite{SZZ_PNAS_2016}.}
+non-precious metals and metals with broader applicability in catalysis~\cite{SZZ_PNAS_2016}.
 
 Considering this, an incredible opportunity exists to identify new classes
 of materials capable of mediating light-matter interactions and energy transfer events that offer the same advantages as metal nanoparticles, 
@@ -117,10 +117,10 @@ hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}.  The uti
 has also provided valuable insights into the role that a metal's band-structure plays
 in determining the efficiency of hot carrier generation, and particularly in the asymmetry between hot-electron
 and hot-hole generation~\cite{SNJ_NatComm_2014}.  Nordlander and co-workers have directly compared free-electron and {\it ab initio} approaches
-and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}.  \textcolor{red}{However, many-body effects are not negligible for hot-carrier dynamics
+and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}.  However, many-body effects are not negligible for hot-carrier dynamics
 in general; for example, Bernardi {\it et al} have demonstrated that many-body effects are important 
 in the overall hot carrier dynamics resulting
-from surface plasmon polaritons in gold, and also in the decay mechanisms for hot-carriers in silver~\cite{BMN_NatComm_2015}.}
+from surface plasmon polaritons in gold, and also in the decay mechanisms for hot-carriers in silver~\cite{BMN_NatComm_2015}.
 
 We develop a novel approach for studying hot carrier dynamics that may arise from arbitrary electromagnetic
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
@@ -163,19 +163,19 @@ matrix.  The Hamiltonian matrix is comprised of three unique classes of elements
   \langle \Phi_j^b | \hat{H}(t) | \Phi_0 \rangle    &   \langle \Phi_j^b | \hat{H}(t) | \Phi_i^a \rangle \end{pmatrix}.
 \end{equation}
 Explicit expressions for each class of matrix elements are given in the SI.
-\textcolor{red}{Importantly, the lower diagonal block of the CIS Hamiltonian matrix contains terms which couple together
+Importantly, the lower diagonal block of the CIS Hamiltonian matrix contains terms which couple together
 different excited configurations.  In particular, transitions between singly-excited configurations which differ
 in only one unoccupied index ($|\Phi_i^a\rangle \rightarrow |\Phi_i^b\rangle$) or which differ in only one occupied index
  ($|\Phi_i^a\rangle \rightarrow |\Phi_j^a\rangle$) are enabled by the terms in the lower diagonal block.  Such excited-state to excited-state transitions are absent from linear response TDDFT and approaches which use time-dependent perturbation
  theory to first order, as these only include transitions between ground- and singly-excited configurations ($|\Phi_0\rangle \rightarrow |\Phi_i^b\rangle$)~\cite{ZHS_JCP_2013,GZG_JPCC_2013}.
 The ($|\Phi_i^a\rangle \rightarrow |\Phi_i^b\rangle$) and ($|\Phi_i^a\rangle \rightarrow |\Phi_j^a\rangle$) are important in this context because the fields that arise from SMA continue to evolve on long ($>$100 fs) timescale.  On this timescale, population can 
 accumulate in excited-state configurations, enabling the SMA fields to drive transitions between excited configurations as well as from the 
-ground-state configuration (see Supporting Information and Figure S4 for more details).} 
+ground-state configuration (see Supporting Information and Figure S4 for more details). 
 
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
 this work neglects excited-state thermalization contributions from electron-electron scattering.  
-\textcolor{red}{As shown in previous work, the inclusion of many-body effects can impact the calculation
+As shown in previous work, the inclusion of many-body effects can impact the calculation
 of hot-carrier distributions when transitions from $d$ bands are relevant, which is in principle whenever the perturbing
 field contains frequency components that overlap with interband transitions involving $d$ bands~\cite{MLK_ACSNano_2014,BMN_NatComm_2015, Atwater_Review}.  
 In this work, we explore SMA involving Au and Pt nanoparticles, and we wish to emphasize that the many-body effects 
@@ -200,7 +200,7 @@ as results with Au and Pt (see Supporting Information and Figure S3).
 many-body effects, and investigation of these effects on the hot-carrier distributions and dynamics resulting from SMA.  It is expected
 that these effects will play a role in the hot-carrier dynamics in several ways, including by changing the available excitation/transition channels
 by mixing of the single-particle states, modifying the transition rates through modification of transition dipole moments, and by enabling
-thermalization of the excited carriers through electron-electron scattering.}
+thermalization of the excited carriers through electron-electron scattering.
 
 Because of the diagonal nature of the field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
 of the field-free Hamiltonian.  This simplifies the interpretation of the electronic structure relative to the CIS 
@@ -219,9 +219,9 @@ and the orbital populations are given by the diagonal elements of the 1-electron
 ^1D^q_q(t) = \langle \Psi(t) | \hat{a}^{\dagger}_q \hat{a}_q | \Psi(t) \rangle,
 \end{equation} 
 where the second-quantized operator $\hat{a}_q^{\dagger}$ ($\hat{a}_q$) creates (kills) an electron
-in orbital $q$~\cite{Szabo}.  \textcolor{red}{The hot-carrier populations plotted in Figures 1 and 2 panels (e) and (f)
+in orbital $q$~\cite{Szabo}.  The hot-carrier populations plotted in Figures 1 and 2 panels (e) and (f)
 are computed as $^1D^q_q(t)-^1D^q_q(t=0)$, and similarly for the change in occupations plotted
-in Figure 3 panels (b) and (c).} The orbital indices can be uniquely mapped to the relevant orbital quantum numbers ($n_x, n_y, n_z$ for
+in Figure 3 panels (b) and (c). The orbital indices can be uniquely mapped to the relevant orbital quantum numbers ($n_x, n_y, n_z$ for
 the PIW NC model) so that the orbital energies can be readily computed (see SI for more details). 
 
 \begin{figure}
@@ -327,13 +327,13 @@ to the resonances of the $d=270nm$ dielectric NS or the Pt nanoparticle.  For ex
 more effective at generating holes in the lowest lying orbital ($E_F - 1.6 eV$) 
 and electrons in the highest 
 lying orbital ($E_F + 0.84 eV$) in the PIW Pt NC active space as compared to FP resonance of the $d=270nm$ NS (see Figure 2 (e) and (f)).  
-The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).  \textcolor{red}{Fairly rapid fluctuations in the hot-carrier populations 
+The hot carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f) and Figure S2).  Fairly rapid fluctuations in the hot-carrier populations 
 are observed in both Au and Pt nanoparticles at relatively short times for all three regimes; this presumably results from the
 broad distribution of energies in the optical fields that encounter the metal nanoparticles 
 at early times combined with
 the density of available transition channels.  By contrast, analogous calculations that have a lower density of
 transition channels through neglect of excited-state to excited-state transitions show smoother dynamics
-(see Figure S4).}
+(see Figure S4).
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{Au_WGM_Spectrum_and_Trajectories.png}
@@ -371,7 +371,7 @@ core structures decorated by metal nanoparticles that enable the interplay betwe
 structure and broadband absorption in the metal nanoparticles, a phenomena known as scattering mediated absorption.  
 We have shown that scattering mediated absorption can generate hot carriers while completely circumventing plasmonic resonance.  
 This result points to the potential for realizing efficient hot carrier generation and transfer in non-precious metals that are 
-earth abundant and cost-effective; \textcolor{red}{future investigations that utilize
+earth abundant and cost-effective; future investigations that utilize
 more realistic models of the electronic structure will be performed to develop a more detailed
 understanding of factors that influence the efficiency of hot-carrier generation in non- or poor plasmonic metals.
 Additional developments that focus on a treatment of the optical properties
@@ -386,7 +386,7 @@ resulting from SMA may be sensitive to the size-dependent dielectric response of
 though the qualitative features of the hot-carrier dynamics reported in this work
 are preserved upon inclusion of these corrections (see Figure S5).  The overall similarity 
 is likely due to the fact that the scattered field associated with the large dielectric
-structure plays the dominant role in driving the dynamics.}   
+structure plays the dominant role in driving the dynamics.   
 
 Our results also reveal that 
 unique electronic dynamics can be realized by modulating the frequency and linewidth of the scattering resonances, which 
