--- a/SMHET.tex
+++ b/SMHET.tex
@@ -30,6 +30,9 @@
 \begin{tocentry}
 \includegraphics[width=9cm]{nanosphere_WGMv3.png}
 \end{tocentry}
+\begin{keywords}
+hot carriers, nanoparticles, scattering mediated absorption, plasmons
+\end{keywords}
 
 \begin{abstract}
 
@@ -50,7 +53,6 @@ scattering mediated hot carrier generation, which has potential for expanding th
 palette of materials that can be utilized for hot carrier mediated photochemistry beyond plasmonic metals,
 and for enabling unique pathways for photocatalytic transformations.
 \end{abstract}
-
 %%\maketitle
 
 %%\end{document}
