--- a/SMHET.tex
+++ b/SMHET.tex
@@ -30,9 +30,6 @@
 \begin{tocentry}
 \includegraphics[width=9cm]{nanosphere_WGMv3.png}
 \end{tocentry}
-\begin{keywords}
-hot carriers, nanoparticles, scattering mediated absorption, plasmons
-\end{keywords}
 
 \begin{abstract}
 
@@ -52,6 +49,8 @@ conditions.  These results are an important first step in understanding the phen
 scattering mediated hot carrier generation, which has potential for expanding the
 palette of materials that can be utilized for hot carrier mediated photochemistry beyond plasmonic metals,
 and for enabling unique pathways for photocatalytic transformations.
+\newline
+{\bf Keywords:}  hot-carriers dynamics, nanoparticles, scattering mediated absorption, plasmons
 \end{abstract}
 %%\maketitle
 
