--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -127,12 +127,17 @@ We develop a novel approach for studying hot carrier dynamics that may arise fro
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
 on noble metal nanoparticles.  Importantly, this method goes beyond a perturbative inclusion of the electric field and enables 
 us to follow the electronic degrees of freedom subject to strong fields with arbitrary time-dependence, which are characteristic of SMA.   
-\textcolor{red}{The explicit time-dependence  of the TDCIS approach allows us to capture transitions that become important as the nearfields from the
-scattering resonances continue to interact with the metal electrons for 10s to 100s of femtoseconds.  Over these timescales, population in 
-various excited configurations begin to accumulat and transitions between different excited configurations become important to the dynamics.  
-This is a unique feature of SMA that is likely unimportant to in plamonic generation of hot-carriers due to the impulsive nature of the plasmon field.  Approaches
-which rely on linear response theory or upon time-dependent pertubation theory that have been sucessfully used to study plasmon generated
-hot-carriers involve dipolar coupling terms only between ground and excited configurations, and hence neglect the transitions between different }
+\textcolor{red}{Specifically, the explicit time-dependence  of this approach allows us to capture transitions that become 
+important as the nearfields from the scattering resonances continue to interact with the metal electrons 
+for 10s to 100s of femtoseconds.  Over these timescales, population accumulates in  
+various excited configurations and transitions between different excited configurations become important to the dynamics.  
+This is a unique feature of SMA that is likely unimportant to in plamonic generation of hot-carriers due to the impulsive 
+nature of the plasmon field.  Although these transient field effects will not be relevant under
+solar illumination conditions, we anticipate that future work that combines the ability to treat transient effects with 
+a more realistic description of the underlying electronic structure will be an important tool to use, particularly in conjuction with
+time-resolved spectroscopies, to provide further fundamental insight into energy transport and relaxation processes
+in composite structures that support SMA.}   
+
 We consider the electronic degrees of freedom on the metal nanoparticle subject to the time-dependent Hamiltonian 
 \begin{equation}\label{eq:TDHam}
 \hat{H}(t) = \hat{H}_{el} - {\bf E}(t) \cdot \hat{\mu}, 
