--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -106,22 +106,27 @@ to those produced by plasmon excitation.
 
 The push to identify novel structures for mediating hot carrier generation and transfer has been paralleled by 
 efforts to develop theoretical methodologies to elucidate these processes.  The underlying electronic
-structure has been treated both within free-electron models confined by potential wells~\cite{GZG_JPCC_2013,ZG_JPCC_2014,MLK_ACSNano_2014,KPB_SciRep_2015,SAG_ACSPhotonics_2016} (here called
-``particle-in-a-well" [PIW] models), as well as by {\it ab initio} approaches~\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}.
+structure has been treated at \textcolor{red}{levels ranging from free-electron models confined by 
+potential wells~\cite{GZG_JPCC_2013,ZG_JPCC_2014,MLK_ACSNano_2014,KPB_SciRep_2015,SAG_ACSPhotonics_2016} 
+(here called ``particle-in-a-well" [PIW] models), the Jellium model within the local density approximation (Jellium LDA)~\cite{MLK_ACSNano_2014},
+and atomistic density functional theory (DFT)~\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}.
+In totality, these theoretical investigations have yielded a number of valuable insights into 
+the relative importance of particle geometry, material bandstructure, and electronic correlation effects on hot-carrier
+generation in metal nanostructures.} 
 Using PIW models, Govorov and co-workers developed a theory of 
 hot carrier generation within the framework of time-dependent perturbation theory that
 has elucidated a variety of shape- and size-dependent factors for optimizing 
 the hot carrier generation~\cite{GZG_JPCC_2013,ZG_JPCC_2014}.  A similar approach was also pursued by Kumarasinghe {\it et al.} suggesting
 that nanorods are exceptionally good structures for hot carrier generation~\cite{KPB_SciRep_2015}.  Garc\'ia de Abajo and co-workers recently described a 
 quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
-hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}.  The utilization of {\it ab initio} approaches by Sundararaman {\it et al} 
-has also provided valuable insights into the role that a metal's band-structure plays
-in determining the efficiency of hot carrier generation, and particularly in the asymmetry between hot-electron
-and hot-hole generation~\cite{SNJ_NatComm_2014}.  Nordlander and co-workers have directly compared free-electron and {\it ab initio} approaches
-and found negligible impact on hot carrier generation and dynamics in Ag nanospheres resulting from electron correlation~\cite{MLK_ACSNano_2014}.  However, many-body effects are not negligible for hot-carrier dynamics
-in general; for example, Bernardi {\it et al} have demonstrated that many-body effects are important 
-in the overall hot carrier dynamics resulting
-from surface plasmon polaritons in gold, and also in the decay mechanisms for hot-carriers in silver~\cite{BMN_NatComm_2015}.
+hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}. \textcolor{red}{Nordlander and co-workers have directly 
+compared free-electron and Jellium-LDA models and found that correlation effects within the LDA have a negligible impact 
+on hot carrier generation and dynamics in Ag nanospheres compared to geometric effects~\cite{MLK_ACSNano_2014}.} 
+\textcolor{red}{The utilization of atomistic DFT by Sundararaman {\it et al.}~\cite{SNJ_NatComm_2014}, 
+Louie and co-workers~\cite{BMN_NatComm_2015}, and Brown {\it et al}~\cite{BSN_ACSNano_2016} 
+has provided valuable insight into the role that metal band-structure plays
+in determining the efficiency of hot carrier generation, the asymmetry between hot-electron
+and hot-hole generation, and the contributions to hot-carrier relaxation.}
 
 We develop a novel approach for studying hot carrier dynamics that may arise from arbitrary electromagnetic
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
@@ -187,6 +192,12 @@ ground-state configuration (see Supporting Information and Figure S4 for more de
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
 this work neglects excited-state thermalization contributions from electron-electron scattering.  
+
+
+%1. Band structure / d electron effects:  The modified text for paragraph 1 of page 5 (page 6 in revised MS) continues to give the impression that free electron and ab initio approaches give the same result.  I think the authors may have misinterpreted Ref 24 (Nordlander et al.): that reference compares free electron models with jellium TD-DFT and finds no difference, but both these methods lack detailed band structure.  What that concludes is that electron exchange/correlations effects at the jellium level are negligible.  (Jellium DFT/TD-DFT calculations are not ab initio.)
+
+%More importantly, in expanding on this point during revision, the authors have mixed up band structure effects including d electrons, which are a single-particle property, with correlation effects, which are many-body.  The correct explanation here is that Ref 24 and 27 show that correlation effects are not particularly important, but Ref 18 and 21 show that band structure effects are very important in gold, but less so in silver due the d band positions.  The rest of the authors response by including silver calculations is greatly appreciated, but the above terminology (correlation vs band structure effects) must be rectified throughout for the updated discussions to be correct.
+
 As shown in previous work, the inclusion of many-body effects can impact the calculation
 of hot-carrier distributions when transitions from $d$ bands are relevant, which is in principle whenever the perturbing
 field contains frequency components that overlap with interband transitions involving $d$ bands~\cite{MLK_ACSNano_2014,BMN_NatComm_2015, Atwater_Review}.  
