Addressed All Questions

--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -121,7 +121,8 @@ that nanorods are exceptionally good structures for hot carrier generation~\cite
 quantum master equation approach with an underlying PIW model that elucidated a number of key factors that influence
 hot carrier excitation and decay dynamics~\cite{SAG_ACSPhotonics_2016}. \textcolor{red}{Nordlander and co-workers have directly 
 compared free-electron and Jellium-LDA models and found that correlation effects within LDA have a negligible impact 
-on hot carrier generation and dynamics in Ag nanospheres compared to geometric effects~\cite{MLK_ACSNano_2014}.} 
+on hot carrier generation and dynamics arising from LSPR in Ag nanospheres as compared to geometric effects
+on the same~\cite{MLK_ACSNano_2014}.} 
 \textcolor{red}{The utilization of atomistic DFT by Sundararaman {\it et al.}~\cite{SNJ_NatComm_2014}, 
 Louie and co-workers~\cite{BMN_NatComm_2015}, and Brown {\it et al}~\cite{BSN_ACSNano_2016} 
 has provided valuable insight into the role that metal band structure plays
