Further revisions on questions

--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -166,7 +166,7 @@ using a commercial simulator based on the finite-difference time-domain [FDTD] m
 Incorporating  ${\bf E}(t)$ from these FDTD simulations into the time-dependent Hamiltonian enables us to investigate the unique ways
 in which the electronic degrees of freedom evolve under the influence of the distinct time-varying fields that result
 from LSPR and from dielectric scattering resonances, allowing us a unique window into the hot carrier dynamics resulting from LSPR as compared
-to SMA.  Further details on the FDTD simulations can be found in the Supplementary Information [SI]. 
+to SMA.  Further details on the FDTD simulations can be found in the SI. 
 
 The many-electron wavefunction of the metal nanoparticles is expanded in terms of a configuration-interaction expansion that
 includes all singly-excited configurations~\cite{Szabo},
@@ -224,11 +224,14 @@ TiO$_2$ nanospheres decorated with large Au nanoparticles.  It has been shown th
 on hot-carrier dynamics in Ag nanoparticles due to the relatively large ($> 3eV)$ gap between the $d$ bands and the Fermi level~\cite{MLK_ACSNano_2014,Atwater_Review}, and so
 analogous calculations have been performed on Ag-decorated nanospheres showing similar qualitative features
 as results with Au and Pt (see Supporting Information and Figure S3).
-  Future work will focus on further developments of this modeling approach to include
-\textcolor{red}{band structure and many-body effects (elaborate)}, and investigation of these effects on the hot-carrier distributions and dynamics resulting from SMA.  It is expected
-that these effects will play a role in the hot-carrier dynamics in several ways, including by changing the available excitation/transition channels
-by mixing of the single-particle states, modifying the transition rates through modification of transition dipole moments, and by enabling
-thermalization of the excited carriers through electron-electron scattering.
+\textcolor{red}{Future work that simulates the long-time electronic dynamics while also capturing band structure
+and many-body effects would be valuable for further elucidating fundamental aspects of hot-carrier dynamics driven by SMA.  
+It is expected
+that both of these effects will play a role in the hot-carrier dynamics in a variety of ways, including by changing the 
+available excitation/transition channels
+by mixing of the single-particle states, modifying the transition rates through 
+modification of transition dipole moments, and by enabling
+thermalization of the excited carriers through electron-electron scattering.}
 
 Because of the diagonal nature of the field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
 of the field-free Hamiltonian.  This simplifies the interpretation of the electronic structure relative to the CIS 
