Further revisions on questions

--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -445,8 +445,9 @@ The authors declare no competing financial interest.
 This work was performed, in part, utilizing resources at
 the Center for Nanoscale Materials, a US Department of Energy, Office of Science, Office of
 Basic Energy Sciences User Facility (contract no. DE-AC02-06CH11357).
-JJF Acknowledges the College of Science and Health for startup support.
-J.C. and N.E. acknowledge the NSF-GS-LSAMP for support.  K.F. acknowledges the WPU CFR for support.
+JJF Acknowledges the College of Science and Health and the Center for Research at William Paterson University
+for startup and summer support.  J.C. and N.E. acknowledge the NSF-GS-LSAMP for 
+support.  K.F. acknowledges the WPU Center for Research for support.
 
 
 \bibliography{SMHET_Redline} 
