Further revisions on questions

--- a/SMHET_Redline.tex
+++ b/SMHET_Redline.tex
@@ -127,7 +127,10 @@ on the same~\cite{MLK_ACSNano_2014}.}
 Louie and co-workers~\cite{BMN_NatComm_2015}, and Brown {\it et al}~\cite{BSN_ACSNano_2016} 
 has provided valuable insight into the role that metal band structure plays
 in determining the efficiency of hot carrier generation, the asymmetry between hot-electron
-and hot-hole generation, and the contributions to hot-carrier relaxation.}
+and hot-hole generation, and the contributions to hot-carrier relaxation.  An important finding 
+of these studies is that interband transitions play a dominant role in hot-carrier generation in gold, but
+are much less important in silver due to the large energetic gap between the Fermi level and the d bands
+in silver.\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}}
 
 We develop a novel approach for studying hot carrier dynamics that may arise from arbitrary electromagnetic
 fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
