--- a/SMHET.tex
+++ b/SMHET.tex
@@ -7,6 +7,7 @@
 \usepackage{multirow}
 \usepackage{multicol}
 \usepackage{color}
+\setkeys{acs}{maxauthors = 0}
 
 \author{Jason Codrington$^{\dagger}$}
 \affiliation{Department of Chemistry, William Paterson University, 300 Pompton Road, Wayne, NJ, 07470, USA}
