Final Formatting Revisions

--- a/SMHET.bib
+++ b/SMHET.bib
@@ -213,7 +213,7 @@ title = {Reversible Modulation of Surface Plasmons in Gold Nanoparticles Enabled
 @article{SCR_JPCC_2016,
 author = {Ana Sousa-Castillo and Miguel Comesaña-Hermo and Benito Rodríguez-González and Moisés Pérez-Lorenzo and Zhiming Wang and Xiang-Tian Kong and Alexander O. Govorov and Miguel A. Correa-Duarte},
 title = {Boosting Hot Electron-Driven Photocatalysis through Anisotropic Plasmonic Nanoparticles with Hot Spots in Au–TiO2 Nanoarchitectures},
-journal = {The Journal of Physical Chemistry C},
+journal = {J. Phys. Chem. C},
 volume = {120},
 number = {21},
 pages = {11690-11699},
@@ -236,7 +236,7 @@ doi = {10.1073/pnas.1609769113},
 abstract ={Metallic nanoparticles with strong optically resonant properties behave as nanoscale optical antennas, and have recently shown extraordinary promise as light-driven catalysts. Traditionally, however, heterogeneous catalysis has relied upon weakly light-absorbing metals such as Pd, Pt, Ru, or Rh to lower the activation energy for chemical reactions. Here we show that coupling a plasmonic nanoantenna directly to catalytic nanoparticles enables the light-induced generation of hot carriers within the catalyst nanoparticles, transforming the entire complex into an efficient light-controlled reactive catalyst. In Pd-decorated Al nanocrystals, photocatalytic hydrogen desorption closely follows the antenna-induced local absorption cross-section of the Pd islands, and a supralinear power dependence strongly suggests that hot-carrier-induced desorption occurs at the Pd island surface. When acetylene is present along with hydrogen, the selectivity for photocatalytic ethylene production relative to ethane is strongly enhanced, approaching 40:1. These observations indicate that antenna−reactor complexes may greatly expand possibilities for developing designer photocatalytic substrates.}, 
 URL = {http://www.pnas.org/content/113/32/8916.abstract}, 
 eprint = {http://www.pnas.org/content/113/32/8916.full.pdf}, 
-journal = {Proceedings of the National Academy of Sciences} 
+journal = {Proc. Natl. Acad. Sci. U.S.A.} 
 }
 
 @article{ZAP_PNAS_2008,
@@ -250,13 +250,13 @@ doi = {10.1073/pnas.0709501105},
 abstract ={In this article, we report metal-enhanced singlet oxygen generation (ME1O2). We demonstrate a direct relationship between the singlet oxygen yield of a common photosensitizer (Rose Bengal) and the theoretical electric field enhancement or enhanced absorption of the photosensitizer in proximity to metallic nanoparticles. Using a series of photosensitizers, sandwiched between silver island films (SiFs), we report that the extent of singlet oxygen enhancement is inversely proportional to the free space singlet oxygen quantum yield. By modifying plasmon coupling parameters, such as nanoparticle size and shape, fluorophore/particle distance, and the excitation wavelength of the coupling photosensitizer, we can readily tune singlet oxygen yields for applications in singlet oxygen-based clinical therapy.}, 
 URL = {http://www.pnas.org/content/105/6/1798.abstract}, 
 eprint = {http://www.pnas.org/content/105/6/1798.full.pdf}, 
-journal = {Proceedings of the National Academy of Sciences} 
+journal = {Proc. Natl. Acad. Sci. U.S.A.} 
 }
 
 @article{MLL_NanoLett_2013,
 author = {Shaunak Mukherjee and Florian Libisch and Nicolas Large and Oara Neumann and Lisa V. Brown and Jin Cheng and J. Britt Lassiter and Emily A. Carter and Peter Nordlander and Naomi J. Halas},
 title = {Hot Electrons Do the Impossible: Plasmon-Induced Dissociation of H2 on Au},
-journal = {Nano Letters},
+journal = {Nano Lett.},
 volume = {13},
 number = {1},
 pages = {240-247},
