--- a/SMHET.tex
+++ b/SMHET.tex
@@ -433,7 +433,7 @@ for improving the efficiency and selectivity of photocatalysis via hot carrier t
 severely limited by the rapid decay of energetic carriers resulting from plasmon resonances.
 
 \section{Associated Content}
-Additional Figures illustrating hot carrier distributions and dynamics, as well as details of the time-dependent
+Supporting Information.  Additional Figures illustrating hot carrier distributions and dynamics, as well as details of the time-dependent
 configuration interaction singles method and the finite-difference time domain simulations are provided in the Supporting 
 Information.  This material is available free of charge via the Internet at http://pubs.acs.org
 
