--- a/SMHET.tex
+++ b/SMHET.tex
@@ -29,7 +29,7 @@
 \begin{document}
 
 \begin{tocentry}
-\includegraphics[width=9cm]{nanosphere_WGMv3.png}
+\includegraphics[width=3.5in]{nanosphere_WGMv3.png}
 \end{tocentry}
 
 \begin{abstract}
